--- a/fleet/bundles/10-awx-operator/fleet.yaml
+++ b/fleet/bundles/10-awx-operator/fleet.yaml
@@ -6,12 +6,12 @@ helm:
   releaseName: awx-operator
   repo: https://ansible-community.github.io/awx-operator-helm
   chart: awx-operator
-  # version: 3.2.0
+   version: 3.2.0
   # targetCustomizations:
   # - name: default
   #   clusterSelector:
   #     matchLabels:
   #       environment: rke2
-  valuessFiles:
-    - values.yaml
+  # valuessFiles:
+  #   - values.yaml
     
