rm target custm change

--- a/fleet/bundles/10-awx-operator/fleet.yaml
+++ b/fleet/bundles/10-awx-operator/fleet.yaml
@@ -7,11 +7,11 @@ helm:
   repo: https://ansible-community.github.io/awx-operator-helm
   chart: awx-operator
   version: 3.2.0
-  targetCustomizations:
-   - name: local
-     clusterSelector:
-       matchLabels:
-         environment: rke2
-  valuessFiles:
-     - values.yaml
+  # targetCustomizations:
+  #  - name: local
+  #    clusterSelector:
+  #      matchLabels:
+  #        environment: rke2
+  # valuessFiles:
+  #    - values.yaml
     
