--- a/fleet/bundles/20-awx-instance/manifests/awx-admin-secrets.yaml
+++ b/fleet/bundles/20-awx-instance/manifests/awx-admin-secrets.yaml
@@ -1,7 +1,12 @@
 apiVersion: v1
 kind: Secret
-metadata: awx-admin-server
+metadata:
+  name: awx-admin-server
 type: Opaque
-stringData:
-  passowrd: "Start1234"
-  username: "admin"
+data:
+    # Default admin password hash (bcrypt recommended, or plain text if testing)
+    admin.password: {{ "admin" | b64enc | quote }}
+
+# stringData:
+#   passowrd: "Start1234"
+#   username: "admin"
