--- a/fleet/bundles/20-awx-instance/manifests/awx-admin-secrets.yaml
+++ b/fleet/bundles/20-awx-instance/manifests/awx-admin-secrets.yaml
@@ -5,8 +5,8 @@ metadata:
 type: Opaque
 data:
     # Default admin password hash (bcrypt recommended, or plain text if testing)
-    admin.password: {{ "admin" | b64enc | quote }}
+    #admin.password: {{ "admin" | b64enc | quote }}
 
 # stringData:
-#   passowrd: "Start1234"
-#   username: "admin"
+    passowrd: "Start1234"
+    username: "admin"
