--- a/fleet/bundles/20-awx-instance/manifests/awx-instance.yaml
+++ b/fleet/bundles/20-awx-instance/manifests/awx-instance.yaml
@@ -4,8 +4,8 @@ kind: AWX
 metadata:
   name: awx
 spec:
-  admin_user: admin
-  admin_paswwrd: awx-admin-Secret
+  #admin_user: admin
+  #admin_paswwrd: awx-admin-Secret
 
   #enable ingress
   ingress_type: ingress 
