--- a/fleet/bundles/20-awx-instance/manifests/awx-instance.yaml
+++ b/fleet/bundles/20-awx-instance/manifests/awx-instance.yaml
@@ -2,7 +2,7 @@
 apiVersion: awx.ansible.com/v1beta1
 kind: AWX
 metadata:
-  name: awx-testing
+  name: awx-demo
 spec:
    #enable ingress
   ingress_type: ingress 
