--- a/fleet/bundles/20-awx-instance/manifests/awx-instance.yaml
+++ b/fleet/bundles/20-awx-instance/manifests/awx-instance.yaml
@@ -12,9 +12,9 @@ spec:
   service_type: ClusterIP
 
   #Ingress annotation for traefik (RKE2 default)
-  ingress_annotations:
+  ingress_annotations: |
     kubernetes.io/ingress_class: traefik
     traefik.ingress.kubernetes.io/router.entrypoints: web
 
-    postgres_storage_class: local-path
-    postgres_data_volume_size: 5Gi
+  postgres_storage_class: local-path
+  postgres_data_volume_size: 5Gi
