--- a/fleet/bundles/20-awx-instance/manifests/awx-instance.yaml
+++ b/fleet/bundles/20-awx-instance/manifests/awx-instance.yaml
@@ -2,8 +2,10 @@
 apiVersion: awx.ansible.com/v1beta1
 kind: AWX
 metadata:
-  name: awx-demo
+  name: awx-instance
 spec:
+  defaultNamespace: awx
+   
    #enable ingress
   ingress_type: ingress 
 
