--- a/fleet/bundles/20-awx-instance/fleet.yaml
+++ b/fleet/bundles/20-awx-instance/fleet.yaml
@@ -2,7 +2,7 @@
 apiVersion: fleet.cattle.io/v1alpha1
 kind: Bundle
 metadata:
-  name: awx-instance
+  name: awx-instance-1
 spec:
   defaultNamespace: awx
   targetNamespace: awx
