cluster specification syntax correction

--- a/fleet/bundles/10-awx-operator/fleet.yaml
+++ b/fleet/bundles/10-awx-operator/fleet.yaml
@@ -17,10 +17,14 @@ spec:
     chart: awx-operator
     version: 3.2.0
     installCrds: true
+  
+  
   targets:
-    - clusterSelector:
-        matchLabels:
-          provider.cattle.io: rke2
+    - {}
+    
+    #- clusterSelector:
+    #    matchLabels:
+    #      provider.cattle.io: rke2
     #valuessFiles:
     #  - values.yaml
     
