--- a/fleet/bundles/10-awx-operator/fleet.yaml
+++ b/fleet/bundles/10-awx-operator/fleet.yaml
@@ -13,7 +13,7 @@ spec:
   helm:
     takeOwnership: true
     releaseName: awx-operator
-    repo: https://ansible-community.github.io/awx-operator/
+    repo: https://ansible-community.github.io/awx-operator-helm/
     chart: awx-operator
     version: 3.2.0
     installCrds: true
