syntax correction rm namespace.yaml

--- a/fleet/bundles/10-awx-operator/fleet.yaml
+++ b/fleet/bundles/10-awx-operator/fleet.yaml
@@ -7,9 +7,9 @@ spec:
   #clusterScope: true
 
   defaultNamespace: awx-operator
-#  targetNamespace: awx-operator
-  resources:
-    - manifests/
+  targetNamespace: awx-operator
+  #resources:
+   # - manifests/
   helm:
     takeOwnership: true
     releaseName: awx-operator
