--- a/fleet/bundles/10-awx-operator/fleet.yaml
+++ b/fleet/bundles/10-awx-operator/fleet.yaml
@@ -11,6 +11,7 @@ spec:
     repo: https://ansible-community.github.io/awx-operator-helm/
     version: 3.2.0
     installCrds: true
-defaultNamespace: awx-operator  
+defaultNamespace: awx-operator 
+targetNamespace: awx-operator
 targets:
 - {}    
