--- a/fleet/bundles/10-awx-operator/fleet.yaml
+++ b/fleet/bundles/10-awx-operator/fleet.yaml
@@ -12,6 +12,6 @@ spec:
     version: 3.2.0
     installCrds: true
 defaultNamespace: awx-operator 
-targetNamespace: awx-operator
+#targetNamespace: awx-operator
 targets:
 - {}    
