--- a/fleet/10-awx-operator/fleet.yaml
+++ b/fleet/10-awx-operator/fleet.yaml
@@ -4,14 +4,13 @@ metadata:
   name: awx-operator
 spec:
   helm:
-    namespace: awx-operator
-    releaseName: awx-operator
-    takeOwnership: true
     chart: awx-operator
     repo: https://ansible-community.github.io/awx-operator-helm/
-    version: 3.2.0
+    version: "3.2.0"
+    releaseName: awx-operator
+    namespace: awx-operator
     installCrds: true
-  
-  
+    takeOwnership: true
+
   targets:
     - {}
