--- a/10-awx-operator/Chart.yaml
+++ b/10-awx-operator/Chart.yaml
@@ -4,6 +4,7 @@ version: 0.1.0
 dependencies:
   - name: awx-operator
     releaseName: awx-operator
+    chart: awx-operator
     namespace: awx-operator
     version: 3.2.0
     repository: https://ansible-community.github.io/awx-operator-helm/
