--- a/10-awx-operator/templates/deployment.yaml
+++ b/10-awx-operator/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: awx-operator
-          image: "{{ .Values.image-repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
           paths:
             - containerPOrt: {{ .Values.service.port }}
           resources:
