affinity add values

--- a/openbao/values.yaml
+++ b/openbao/values.yaml
@@ -25,3 +25,15 @@ ha:
       }
 
       service_registration "kubernetes" {}
+
+
+affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+              - key: kubernetes.io/hostname  # Example key
+                operator: In
+                values:
+                  - rke-node2
+                  - rke-node3
