--- a/openbao/values.yaml
+++ b/openbao/values.yaml
@@ -1,40 +1,38 @@
-ha:
-  enabled: true
-  replicas: 3
-  api_addr : null
-  cluster_addr : null
-
-  raft:
+server:
+  ha:
     enabled: true
+    replicas: 3
+    #api_addr : null
+    #cluster_addr : null
 
-    config: |
-      ui = true
+    raft:
+      enabled: true
 
-      listener "tcp" {
-        tls_disable = 1
-        address = "[::]:8200"
-        cluster_addr = "[::]:8201"
-        #enable unauthenticated metrics access (neccessary for Prometheus Operator)
-        #telemetry{
-        #  unauthenticated_me trics_access = "true"
-        #}        
-      }
+      config: |
+        ui = true
 
-      storage {
-        path = "/mnt/openbao"
+        listener "tcp" {
+          tls_disable = 1
+          address = "[::]:8200"
+          cluster_addr = "[::]:8201"
+          #enable unauthenticated metrics access (neccessary for Prometheus Operator)
+          #telemetry{
+          #  unauthenticated_me trics_access = "true"
+          #}        
+        }
 
-      }
+        storage {
+          path = "/openbao/data"
 
-      service_registration "kubernetes" {}
+        } 
 
+        service_registration "kubernetes" {}
+  dataStorage:
+    enabled: true
+    size: 10Gi
+    storageClass: "lonnghorn"
 
-affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-          - matchExpressions:
-              - key: kubernetes.io/hostname  # Example key
-                operator: In
-                values:
-                  - rke-node2
-                  - rke-node3
+ui:
+  enabled: true
+  serviceType: NodePort
+  nodePort: 40000
