--- a/openbao/values.yaml
+++ b/openbao/values.yaml
@@ -1,22 +1,6 @@
 server:
-  ha:
-    enabled: true
-    replicaCount: 3
-    raft:
-      enabled: true
-      setNodeId: true
-      config: |-
-        ui = false
-        listener "tcp" {
-          tls_disable = 1
-          address = "[::]:8200"
-          cluster_address = "[::]:8201"
-        }
-        storage "raft" {
-          path = "/mnt/data"
-        }
-        service_registration "kubernetes" {}
 
+  # Scheduling MUST be here, not under ha
   nodeSelector:
     openbao-node: "true"
 
@@ -25,15 +9,40 @@ server:
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
         - matchExpressions:
-          - key: openbao-node
-            operator: Exists
+            - key: openbao-node
+              operator: Exists
 
+  # HA + Raft config
+  ha:
+    enabled: true
+    replicaCount: 3
+
+    raft:
+      enabled: true
+      setNodeId: true
+      config: |-
+        ui = false
+
+        listener "tcp" {
+          tls_disable     = 1
+          address         = "[::]:8200"
+          cluster_address = "[::]:8201"
+        }
+
+        storage "raft" {
+          path = "/openbao/data"
+        }
+
+        service_registration "kubernetes" {}
+
+  # PVC settings
   dataStorage:
     enabled: true
     size: 8Gi
-    storageClass: "local-path"
+    storageClass: local-path
 
 ui:
   enabled: true
   serviceType: NodePort
   serviceNodePort: 32100
+
