--- a/openbao/values.yaml
+++ b/openbao/values.yaml
@@ -21,7 +21,7 @@ server:
       enabled: true
       setNodeId: true
       config: |-
-        ui = false
+        ui = true`
 
         listener "tcp" {
           tls_disable     = 1
