--- a/openbao/values.yaml
+++ b/openbao/values.yaml
@@ -1,11 +1,19 @@
 #configures OpenBao server pods -> how should  Openbao run?
 server:
-  securityContext:
-   runAsUser: 100
-   runAsGroup: 1000
-   fsGroup: 1000
-   fsGroupChangePolicy: "OnRootMismatch"
-   runAsNonRoot: true
+  extraInitContainers:
+    - name: fix-permissions
+      image: busybox:1.36
+      command:
+        - sh
+        - -c
+        - |
+          chown -R 100:1000 /openbao/data || true
+          chmod -R g+rwX /openbao/data || true
+      securityContext:
+        runAsUser: 0
+      volumeMounts:
+        - name: data
+          mountPath: /openbao/data
 
   # Scheduling MUST be here, not under ha
   #nodeSelector:
