--- a/openbao/values.yaml
+++ b/openbao/values.yaml
@@ -14,12 +14,16 @@ server:
       volumeMounts:
         - name: data
           mountPath: /openbao/data
+  
   podSecurityContext:
     fsGroup: 1000
     fsGroupChangePolicy: OnRootMismatch
-      
+
   securityContext:
-   runAsUser: 0
+   runAsNonRoot: true
+   runAsUser: 100
+   runAsGroup: 1000
+   
   
   # Scheduling MUST be here, not under ha
   #nodeSelector:
