--- a/20-awx-instance/awx.yaml
+++ b/20-awx-instance/awx.yaml
@@ -20,7 +20,7 @@ spec:
   task_replicas: 1
   
    #use local path for postgres data
-  postgres_storage_class: awx-local-static
+  postgres_storage_class: local-path
   postgres_storage_requirements:
     requests:
       storage: 8Gi
